--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Tarjuman Project</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <head>
-	<title>My Website</title>
+<h1>Welcome to The Tarjuman Project</h1>
 </head>
+
+<h2><em>Cobles</em></h2>
+
 <body>
-	<h1>Welcome to my website!</h1>
-	<p>This is a simple website created using HTML and CSS.</p>
+<p>Welcome to the Abd-Allah Al Tarjuman project. This is a work in progress, which seeks to offer a free and open-source translation of the poetic works of Abd-Allah al Tarjuman (also known as Anselm Turmeda).</p>
+
+<h2>Texts</h2>
+<ul>
+<li><a href="/cobles"></a>Cobles</li>
+<li><a href="/text2"></a>Text2</li>
+<li><a href="/text3"></a>Text3</li>
+</ul>
+
+<h2>Analytics</h2>
+<ul>
+<li><a href="/cobles"></a></li>
+<li><a href="/cobles"></a></li>
+<li><a href="/cobles"></a></li>
+</ul>
+
+<h2>Further Reading</h2>
+<li><a href="/cobles">Abd-Allah Al Tarjuman</a></li>
+<li><a href="/cobles"></a>Digital Humanities</li>
 </body>
+
+<footer>
+  <p>Translation and site design by Vincenzo Bavetta</p>
+  <p><a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a></p>
+</footer>
+
+  <body>
+	<script src="index.js"></script>
+  </body>
 </html>
