--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 <head>
 <h1>Welcome to The Tarjuman Project</h1>
 </head>
-
-<h2><em>Cobles</em></h2>
-
 <body>
 <p>Welcome to the Abd-Allah Al Tarjuman project. This is a work in progress, which seeks to offer a free and open-source translation of the poetic works of Abd-Allah al Tarjuman (also known as Anselm Turmeda).</p>
 
 <h2>Texts</h2>
 <ul>
-<li><a href="/cobles"></a>Cobles</li>
+<a href="https://-Enzo-Bavetta-.github.io/Cobles/">Cobles Translation</a>
 <li><a href="/text2"></a>Text2</li>
 <li><a href="/text3"></a>Text3</li>
 </ul>
