--- a/index.html
+++ b/index.html
@@ -15,23 +15,9 @@
 
 <h2>Texts</h2>
 <ul>
-<a href="https://-Enzo-Bavetta-.github.io/Cobles/">Cobles Translation1</a>
-<a href="https://-Enzo-Bavetta-.github.io/Cobles">Cobles Translation2</a>
-<a href="https://Enzo-Bavetta-.github.io/Cobles/">Cobles Translation3</a>
-<a href="https://-Enzo-Bavetta-.github.io/Cobles.html/">Cobles Translation4</a>
-<a href="https://-Enzo-Bavetta-.github.io/Cobles.html">Cobles Translation5</a>
-<a href="-Enzo-Bavetta-.github.io/Cobles/">Cobles Translation6</a>
 
+<li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Cobles.html">Cobles Translation7</a></li>
 
-
-
--Enzo-Bavetta-.github.io/Cobles.html
-<a href="/Cobles/">Cobles Translation7</a>
-
-
-<a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Cobles.html">Cobles Translation7</a>
-
-https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Cobles.html
 <li><a href="/text2"></a>Text2</li>
 <li><a href="/text3"></a>Text3</li>
 </ul>
