--- a/Cobles.html
+++ b/Cobles.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Tarjuman Project</title>
+    <link rel="stylesheet" href="style.css">
+
+
 <style>
-
-
 .float-container {
     border: 3px solid #fff;
     padding: 20px;
@@ -27,9 +35,9 @@
 
 }  </style>
 
+ </head>
+
 <head>
-<h1>The Tarjuman Project</h1>
-</head>
 
 <h2><em>Cobles</em></h2>
 
@@ -38,7 +46,7 @@
 <div class="float-container">
 
  <div class="float1" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
-<h2>float 1</h2>
+<h2>El text original en català</h2>
 <ol type=1>
 <li>Item1</li>
 <li>Item2</li>
@@ -46,7 +54,7 @@
  </div>
  
 <div class="float2" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
-<h2>float 2</h2>
+<h2>English Translation</h2>
 <ol type=1>
 <li>Item1</li>
 <li>Item2</li>
@@ -55,7 +63,7 @@
  
 
 <div class="float3" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
-<h2>float 3</h2>
+<h2>Commentary</h2>
 <ul>
 <li>Item1</li>
 <li>Item2</li>
@@ -70,6 +78,8 @@
   Translation and site design by Vincenzo Bavetta
   <a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a>
 </footer>
-
+<script src="index.js"></script>
+  </body>
+</html>
 
 <!-- Use this code to embed a file rather than use tags: <embed src="file.txt"> -->
