--- a/Cobles.html
+++ b/Cobles.html
@@ -9,29 +9,36 @@
 
 
 <style>
-.float-container {
-    border: 3px solid #fff;
+.float-container{
+    border:3px solid #fff;
     padding: 20px;
-    height:200px;
-
+    height:320px;
 }
 
 .float1 {
-    width: 31%;
     float: left;
+    border:1px solid black;
+    width:31%;
+    height:300px;
+    overflow:scroll;
    
 }  
 
 .float2 {
-    width: 31%;
-    float: left;
-   
+    float:left;
+    border:1px solid black;
+    width:31%;
+    height:300px;
+    overflow:scroll;
    
 }  
 
 .float3 {
-    width: 31%;
-    float: left;
+       float: left;
+    border:1px solid black;
+    width:31%;
+    height:300px;
+    overflow:scroll;
 
 }  </style>
 
@@ -41,11 +48,13 @@
 
 <h2><em>Cobles</em></h2>
 
+<a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
+
 <body>
 
 <div class="float-container">
 
- <div class="float1" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
+ <div class="float1">
 <h2>El text original en català</h2>
 <ol type=1>
 <li>Item1</li>
@@ -53,7 +62,7 @@
 </ol>
  </div>
  
-<div class="float2" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
+<div class="float2">
 <h2>English Translation</h2>
 <ol type=1>
 <li>Item1</li>
@@ -62,12 +71,12 @@
 </div>
  
 
-<div class="float3" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
+<div class="float3">
 <h2>Commentary</h2>
-<ul>
+<ol>
 <li>Item1</li>
 <li>Item2</li>
-</ul>
+</ol>
 </div>
 
 </div>
@@ -78,8 +87,6 @@
   Translation and site design by Vincenzo Bavetta
   <a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a>
 </footer>
-<script src="index.js"></script>
-  </body>
 </html>
 
 <!-- Use this code to embed a file rather than use tags: <embed src="file.txt"> -->
