--- a/Further reading.html
+++ b/Further reading.html
@@ -20,7 +20,7 @@
 
 </ul>
 
-<h2>Digital Humanities</h2>
+<h2 id="Digital_Humanities">Digital Humanities</h2>
 
 <p>This project aims to be open source and easy to access to all.
  Resources related to open source publishing, digital humanities, independent scholarship and website development are listed below:</p>
