--- a/index.html
+++ b/index.html
@@ -47,7 +47,67 @@ This is a work in progress, which seeks to offer a free and open-source translat
 <h2>Further Reading</h2>
 <li><a href="/cobles">Abd-Allah Al Tarjuman</a></li>
 <s>
-<li><a href="/cobles">Digital Humanities</a></li>
+<li><a href="<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Tarjuman Project</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+<head>
+<h1>Welcome to The Tarjuman Project</h1>
+</head>
+<body>
+<p>Welcome to the Abd-Allah Al Tarjuman project. 
+This is a work in progress, which seeks to offer a free and open-source translation
+ of the poetic works of Abd-Allah al Tarjuman (also known as Anselm Turmeda).
+</p>
+<p>
+
+(struck-through text indicates areas of the website that are not yet available).
+ </p>
+
+<h2>Texts</h2>
+<ul>
+
+<li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Cobles.html">Cobles de la divisió del Regne de Mallorques</a></li>
+
+<s>
+
+<li><a href="/text2">Disputa de l'ase</a></li>
+<li><a href="/text3">Llibre de tres</a></li>
+<li><a href="/text3">Tuhfat al-Arib fi al-Radd 'ala ahl al-Salib</a></li>
+<li><a href="/text3">Llibre dels bons amonestaments</a></li>
+
+
+</ul>
+</s>
+
+<h2>Analytics</h2>
+<s>
+<ul>
+<li><a href="">Word frequency analysis</a></li>
+<li><a href="/cobles">Site usage data</a></li>
+</ul>
+</s>
+
+<h2>Further Reading</h2>
+<li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Further%20reading.html">Abd-Allah Al Tarjuman</a></li>
+<s>
+<li><a href="#Digital_Humanities">Digital Humanities</a></li>
+</s>
+</body>
+
+<footer>
+  <p>Translation and site design by Vincenzo Bavetta</p>
+  <p><a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a></p>
+</footer>
+
+	<script src="index.js"></script>
+  </body>
+</html>">Digital Humanities</a></li>
 </s>
 </body>
 
