--- a/Cobles.html
+++ b/Cobles.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -84,9 +86,10 @@
 </body>
 
 <footer>
-  Translation and site design by Vincenzo Bavetta
-  <a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a>
+  <p>Translation and site design by Vincenzo Bavetta
+  <a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a>.</p>
 </footer>
 </html>
 
 <!-- Use this code to embed a file rather than use tags: <embed src="file.txt"> -->
+
