--- a/Further reading.html
+++ b/Further reading.html
@@ -11,6 +11,7 @@
 <h1>Welcome to The Tarjuman Project</h1>
 </head>
 <h1>Further Reading</h1>
+<a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
 
 <h2>Abd-Allah Al Tarjuman</h2>
 
@@ -20,7 +21,7 @@
 
 </ul>
 
-<h2 id="Digital_Humanities">Digital Humanities</h2>
+<h2>Digital Humanities</h2>
 
 <p>This project aims to be open source and easy to access to all.
  Resources related to open source publishing, digital humanities, independent scholarship and website development are listed below:</p>
