--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@ This is a work in progress, which seeks to offer a free and open-source translat
 </s>
 
 <h2>Further Reading</h2>
-<li><a href="/cobles">Abd-Allah Al Tarjuman</a></li>
+<li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Further_reading.html">Abd-Allah Al Tarjuman</a></li>
 <li><a href="#Digital_Humanities">Digital Humanities</a></li>
 </s>
 </body>
-
 <footer>
   <p>Translation and site design by Vincenzo Bavetta</p>
   <p><a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a></p>
