--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ This is a work in progress, which seeks to offer a free and open-source translat
 
 <h2>Further Reading</h2>
 <li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Further_reading.html">Abd-Allah Al Tarjuman</a></li>
-<li><a href="#Digital_Humanities">Digital Humanities</a></li>
+<li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Further_reading.html#Digital_Humanities">Digital Humanities</a></li>
 </s>
 </body>
 <footer>
