--- a/O_babilonia.html
+++ b/O_babilonia.html
@@ -1,27 +1,17 @@
-<style>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Tarjuman Project</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-
-.float-container {
-    border: 3px solid #fff;
-    padding: 20px;
-    display: flex;
-}
-
-.float1{
-    flex: 1;
-    border:1px solid black;
-    width:150px;
-    height:500vh;
-    overflow:scroll
-}
-
-}  </style>
 
 <head>
 <h1>The Tarjuman Project</h1>
 </head>
-
-<h2><em>Cobles</em></h2>
 
 <body>
 
