--- a/Cobles.html
+++ b/Cobles.html
@@ -1,9 +1,13 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <!-- Google tag (gtag.js) -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Tarjuman Project</title>
+    <link rel="stylesheet" href="style.css">
+  
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MLNR3DMWQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -11,85 +15,40 @@
   gtag('js', new Date());
 
   gtag('config', 'G-6MLNR3DMWQ');
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>The Tarjuman Project</title>
-    <link rel="stylesheet" href="style.css">
-
-
-<style>
-.float-container{
-    border:3px solid #fff;
-    padding: 20px;
-    height:320px;
-}
-
-.float1 {
-    float: left;
-    border:1px solid black;
-    width:31%;
-    height:300px;
-    overflow:scroll;
-   
-}  
-
-.float2 {
-    float:left;
-    border:1px solid black;
-    width:31%;
-    height:300px;
-    overflow:scroll;
-   
-}  
-
-.float3 {
-       float: left;
-    border:1px solid black;
-    width:31%;
-    height:300px;
-    overflow:scroll;
-
-}  </style>
-    
-   
 </script>
-
- </head>
-
-<head>
+<h1>The Tarjuman Project</h1>
+</head>
 
 <h2><em>Cobles</em></h2>
-
-<a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
 
 <body>
 
 <div class="float-container">
 
- <div class="float1">
-<h2>El text original en català</h2>
+ <div class="float1" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
+<h2>float 1</h2>
 <ol type=1>
-<li>Item1</li>
-<li>Item2</li>
+<li>    first line  </li>
+
+
 </ol>
  </div>
  
-<div class="float2">
-<h2>English Translation</h2>
+<div class="float1" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
+<h2>float 2</h2>
 <ol type=1>
-<li>Item1</li>
-<li>Item2</li>
+<li>    first line   </li>
+
 </ol>
 </div>
  
 
-<div class="float3">
-<h2>Commentary</h2>
-<ol>
+<div class="float1" style="border:1px solid black;width:150px;height:150px;overflow:scroll;">
+<h2>float 3</h2>
+<ul>
 <li>Item1</li>
 <li>Item2</li>
-</ol>
+</ul>
 </div>
 
 </div>
@@ -97,10 +56,9 @@
 </body>
 
 <footer>
-  <p>Translation and site design by Vincenzo Bavetta
-  <a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a>.</p>
+  Translation and site design by Vincenzo Bavetta
+  <a href="enzo.bavetta@gmail.com">enzo.bavetta@gmail.com</a>
 </footer>
-</html>
+
 
 <!-- Use this code to embed a file rather than use tags: <embed src="file.txt"> -->
-
