--- a/Further_reading.html
+++ b/Further_reading.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Tarjuman Project</title>
+    <link rel="stylesheet" href="style.css">
+  
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MLNR3DMWQ"></script>
 <script>
@@ -10,16 +16,11 @@
 
   gtag('config', 'G-6MLNR3DMWQ');
 </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>The Tarjuman Project</title>
-    <link rel="stylesheet" href="style.css">
- 
+  
 <h1>Welcome to The Tarjuman Project</h1>
 </head>
 <h1>Further Reading</h1>
-<a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
+<a href="enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
 
 <h2>Abd-Allah Al Tarjuman</h2>
 
