--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <!-- Google tag (gtag.js) -->
+      <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MLNR3DMWQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,23 +10,31 @@
 
   gtag('config', 'G-6MLNR3DMWQ');
 </script>
-   <title>The Tarjuman Project</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Tarjuman Project</title>
+    <link rel="stylesheet" href="style.css">
+ 
 <h1>Welcome to The Tarjuman Project</h1>
 </head>
 <body>
-<p>Welcome to the Abd-Allah Al Tarjuman project. 
-This is a work in progress, which seeks to offer a free and open-source translation
- of the poetic works of Abd-Allah al Tarjuman (also known as Anselm Turmeda).
+<p>This is a passion project/ sandbox/ playground. Nothing here should be take too seriously, yet. 
 </p>
 <p>
 
 (struck-through text indicates areas of the website that are not yet available).
  </p>
 
-<h2>Texts</h2>
+<h2>Abd-Allah's Writings</h2>
 <ul>
 
 <li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Cobles.html">Cobles de la divisió del Regne de Mallorques</a></li>
+
+<li><a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/O_babilonia.html">O Babilònia, tu Barcelona!</a></li>
+
+
 
 <s>
 
@@ -38,6 +46,9 @@ This is a work in progress, which seeks to offer a free and open-source translat
 
 </ul>
 </s>
+
+<h2>Related texts</h2>
+
 
 <h2>Analytics</h2>
 <s>
