--- a/Cobles.html
+++ b/Cobles.html
@@ -19,9 +19,9 @@
 <h1>The Tarjuman Project</h1>
 </head>
 
-<h2><em>Cobles</em></h2>
 
 <body>
+<a href="enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
 
 <div class="float-container">
 
@@ -52,7 +52,7 @@
 </div>
 
 </div>
-
+<a href="enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
 </body>
 
 <footer>
