--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 <h2>Related texts</h2>
 
-
+<li><a href="">Dottrina dello schiavo di Bari</a></li>
+<li><a href="">La Enciclopedia de los Hermanos de la Pureza</a></li>
 <h2>Analytics</h2>
 <s>
 <ul>
