--- a/Further_reading.html
+++ b/Further_reading.html
@@ -16,7 +16,7 @@
 
   gtag('config', 'G-6MLNR3DMWQ');
 </script>
-  
+
 <h1>Welcome to The Tarjuman Project</h1>
 </head>
 <h1>Further Reading</h1>
@@ -40,7 +40,6 @@
 </ul>
 
 
-
-<script src="index.js"></script>
+<a href="enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
   </body>
 </html>
