--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Tarjuman Project</title>
     <link rel="stylesheet" href="style.css">
- 
+
+
+
 <h1>Welcome to The Tarjuman Project</h1>
+<img src="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Anselm-Turmeda.png" style="float: inline-start; margin-right: 10px; width:25vh!important;"></img>
+<div style="height:1px;">
+</div>
 </head>
 <body>
 <p>This is a passion project/ sandbox/ playground. Nothing here should be take too seriously, yet. 
 </p>
 <p>
+
 
 (struck-through text indicates areas of the website that are not yet available).
  </p>
