--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <title>The Tarjuman Project</title>
     <link rel="stylesheet" href="style.css">
 
-
+<img src="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Anselm-Turmeda.png" style="float: right; margin-right: 10px; width:10vh;"></img>
 
 <h1>Welcome to The Tarjuman Project</h1>
-<img src="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Anselm-Turmeda.png" style="float: inline-start; margin-right: 10px; width:25vh!important;"></img>
+
+
 <div style="height:1px;">
 </div>
 </head>
