--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <title>The Tarjuman Project</title>
     <link rel="stylesheet" href="style.css">
 
-<img src="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Anselm-Turmeda.png" style="float: right; margin-right: 10vh; height:15vh;"></img>
+<img src="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/Anselm-Turmeda.png" style="float: right; margin-right: 10px; width:15vh;"></img>
 
 <h1>Welcome to The Tarjuman Project</h1>
 
 
-<div style="height:10vh;">
+<div style="height:1px;">
 </div>
 </head>
 <body>
