--- a/O_babilonia.html
+++ b/O_babilonia.html
@@ -26,6 +26,9 @@
 
 <body>
     <a href="https://enzo-bavetta.github.io/-Enzo-Bavetta-.github.io/">Back to main Page</a>
+	
+	<p>The only surviving version of this short, apocalyptic prophecy in verse, can be found in MS Carpentras .336, Fol. 200v. The manuscript is usually dated 1405-7.
+	</p>
 
 <div class="float-container">
 
@@ -79,8 +82,11 @@
 <div class="float1">
 <h2>float 3</h2>
 <ul>
-<li>Item1</li>
-<li>Item2</li>
+<li>4-The meaning here is not entirely clear. The Diccionari català-valencià-balear defines ‘pendir-se’ as ‘A algú, saber-li greu d’haver fet o deixat de fer alguna cosa’ and as deriving from the Latin ‘poeniteo’. The sense of the word as having to do with repentance is evident from its other uses in the poem. However, we would not expect God to be repentant and there is no obvious alternative for who might be the subject of the verb, therefore I have opted for ‘regretful’ in the sense of God being regretful of his creation and deciding not to forgive Barcelona/Babylon and instead destroy it.
+</li>
+<li>5-
+See Revelation 12 and 13 for the apocalyptic vocabulary at work here, including reference to ‘signs’ and ‘the beast’.
+</li>
 </ul>
 </div>
 
