--- a/O_babilonia.html
+++ b/O_babilonia.html
@@ -80,7 +80,7 @@
  
 
 <div class="float1">
-<h2>float 3</h2>
+<h2>Commentary</h2>
 <ul>
 <li>4-The meaning here is not entirely clear. The Diccionari català-valencià-balear defines ‘pendir-se’ as ‘A algú, saber-li greu d’haver fet o deixat de fer alguna cosa’ and as deriving from the Latin ‘poeniteo’. The sense of the word as having to do with repentance is evident from its other uses in the poem. However, we would not expect God to be repentant and there is no obvious alternative for who might be the subject of the verb, therefore I have opted for ‘regretful’ in the sense of God being regretful of his creation and deciding not to forgive Barcelona/Babylon and instead destroy it.
 </li>
